--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  height: 100vh;
+  /* height: 100vh; */
   /* overflow: hidden; */
 }
 
@@ -63,8 +63,20 @@ blockquote {
   font-size: 0.9rem;
 }
 
+.h-120 {
+  height: 120px;
+}
+
 .h-100 {
-  height: 100vh;
+  height: 100%;
+}
+
+.w-70 {
+  width: 70%;
+}
+
+.w-100 {
+  width: 100%;
 }
 
 .mt-12 {
@@ -77,6 +89,10 @@ blockquote {
 
 .mt-30 {
   margin-top: 30px;
+}
+
+.mb-0 {
+  margin-bottom: 0;
 }
 
 .mb-12 {
@@ -177,6 +193,21 @@ blockquote {
 
 .button--secondary--outline--thin {
   border: #bdbdbd solid 1px;
+}
+
+.button--info--outline {
+  background-color: white !important;
+  color: #ffc107;
+  border: #ffc107 solid 2px;
+}
+
+.button--info--outline:hover {
+  background-color: #ffc107 !important;
+  color: white;
+}
+
+.button--info--outline--thin {
+  border: #ffc107 solid 1px;
 }
 
 .button--love--active {
